Update Groovy, changelog and fixed a couple of deprecation warnings.